# agec

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
examples/: 01_basic_validation.py  02_block_bad_context.py  03_openai_tool_guard.py  04_langgraph_node_guard.py  05_audit_log.py  06_persisted_audit_log.py  07_local_automation_guard.py  08_sales_campaign.py  coding_agent.py  crm_email_agent.py  cto_demo.py  pipeline_demo.py  quickstart.py
src/agec/: __init__.py  audit.py  client.py  context.py  core.py  decisions.py  demo.py  guard.py  models.py  path.py  policies.py  validator.py
src/agec/adapters/: __init__.py  base.py  langgraph.py  openai.py  typing.py
tests/: test_adapters.py  test_agec.py  test_validator.py
