[project]
name = "agec"
version = "0.1.0"
description = "Pre-execution governance SDK for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Onur Esmercan", email = "onuresmercan@gmail.com" }
]
keywords = ["ai-agents", "governance", "audit", "security", "pre-execution"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0"]
langgraph = ["langgraph>=0.2"]
dev = ["pytest>=8.0", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/onur-esmercan/agec"
Repository = "https://github.com/onur-esmercan/agec"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["agec"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
